--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
 
-                    <li class="nav-item"><a href="prices.html" class="nav-link">Prices</a></li>
+                    <li class="nav-item"><a href="/prices" class="nav-link">Prices</a></li>
 
-                    <li class="nav-item"><a href="tos.html" class="nav-link">ToS</a></li>
+                    <li class="nav-item"><a href="/tos" class="nav-link">ToS</a></li>
 
                     <li class="nav-item"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdIV0rqTKYfYpA8CXYkpjlIMoK8k4uTnBzf8kzGiehR1vnDPQ/viewform" class="nav-link">Order form</a></li>
 
