--- a/tos.html
+++ b/tos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tash.draws commissions ToS</title>
+    <title>tash.draws commissions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/091da124de.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,11 +22,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
 
-                    <li class="nav-item"><a href="prices.html" class="nav-link">Prices</a></li>
+                    <li class="nav-item"><a href="/prices" class="nav-link">Prices</a></li>
 
-                    <li class="nav-item"><a href="tos.html" class="nav-link active">ToS</a></li>
+                    <li class="nav-item"><a href="/tos" class="nav-link active">ToS</a></li>
 
                     <li class="nav-item"><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdIV0rqTKYfYpA8CXYkpjlIMoK8k4uTnBzf8kzGiehR1vnDPQ/viewform" class="nav-link">Order form</a></li>
 
