--- a/tos.html
+++ b/tos.html
@@ -7,9 +7,6 @@
     <title>tash.draws commissions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/091da124de.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,6 +47,7 @@
                         - Fan art<br>
                         - Real people (stylized)<br>
                         - Some animals (ask me first)<br>
+                        - Humans with animal ears/tail
                     </p>
                 </div>
                 <div class="col-sm-6">
@@ -59,7 +57,7 @@
                         - Gore<br>
                         - Inappropriate/offensive content<br>
                         - Heavy mecha<br>
-                        - Furries (humans with animal ears/tail is fine)<br>
+                        - Furries<br>
                         - Detailed backgrounds<br>
                         - Anything I'm not comfortable with<br>
                     </p>
