--- a/prices.html
+++ b/prices.html
@@ -123,6 +123,12 @@
                 </div>
             </div>
         </div>
+        <div class="text-center">
+            <h2>Additional info:</h2>
+            <p style="font-size: 1.3rem">⩥   Solid color background is free
+            <br>⩥   Additional cost for simple background will vary depending on complexity (starting at $5)
+            <br>⩥   Animals will have additional cost depending on amount and complexity (starting at $5)</p>
+        </div>
     </main>
     <footer class="p-4 text-center">
         <a href="#header" class="float-right"><i class="fas fa-arrow-up"></i></a>
