--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto text-right">
                     <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
 
                     <li class="nav-item"><a href="/prices" class="nav-link">Prices</a></li>
